Make a service for webcam

--- a/src/app/image-classification/image-classification.component.html
+++ b/src/app/image-classification/image-classification.component.html
@@ -1,8 +1,6 @@
 <div style="display: flex">
   <div style="display: flex; flex-direction: column; width: 80%">
-    <div>
-      <video #webcamVideo></video>
-    </div>
+    <app-tf-web-cam></app-tf-web-cam>
     <div>
       <table>
         <tr>
