Add handpose model

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <!-- <router-outlet></router-outlet> -->
-
-<app-image-classification></app-image-classification>
+<!-- <app-image-classification></app-image-classification> -->
+<app-handpose></app-handpose>
