--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <!-- <router-outlet></router-outlet> -->
 <!-- <app-image-classification></app-image-classification> -->
-<app-handpose></app-handpose>
+<!-- <app-handpose></app-handpose> -->
+<app-face-landmarks></app-face-landmarks>
