Add knn classifier

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
-<!-- <router-outlet></router-outlet> -->
-<!-- <app-image-classification></app-image-classification> -->
 <!-- <app-handpose></app-handpose> -->
-<app-face-landmarks></app-face-landmarks>
+
+<!-- <app-image-classification></app-image-classification> -->
+
+<!-- <app-face-landmarks></app-face-landmarks> -->
+
+<app-knn-classifier></app-knn-classifier>
