Add menu with angular material

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,6 @@
 
 <!-- <app-face-landmarks></app-face-landmarks> -->
 
-<app-knn-classifier></app-knn-classifier>
+<!--<app-knn-classifier></app-knn-classifier>-->
+
+<app-menu></app-menu>
